--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.556.0",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-intersection-observer": "^10.0.0",
